# automation-

./: .gitignore  AGENTS.md  CRYPTO_VALIDATION_FRAMEWORK.md  README.md  pyproject.toml
crypto_validation/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  models.py  vectors.py
crypto_validation/dut/: __init__.py  aes_python.py  base.py  registry.py
crypto_validation/parsers/: __init__.py  aes_common.py  base.py  json.py  registry.py  rsp.py
crypto_validation/reporting/: console.py  json_reporter.py  summary.py
crypto_validation/validation/: __init__.py  comparator.py  engine.py  executors.py
docs/: API_REFERENCE.md  EXTENSION_GUIDE.md  SPECIFICATION.md
sample_vectors/aes/: aes_cbc_128.json  aes_cbc_128.rsp  aes_cfb128_128.rsp  aes_cfb1_256.rsp  aes_cfb8_128.rsp  aes_ctr_128.rsp  aes_ctr_128_acvp.json  aes_ofb_128.rsp
sample_vectors/aes/failure_injection/: cbc_decrypt_bad_plaintext.rsp  cbc_encrypt_bad_ciphertext.rsp  cfb128_encrypt_bad_ciphertext.rsp  cfb1_decrypt_bad_plaintext.rsp  cfb1_encrypt_bad_ciphertext.rsp  cfb8_encrypt_bad_ciphertext.rsp  ctr_decrypt_bad_plaintext.rsp  ctr_encrypt_bad_ciphertext.rsp  ctr_encrypt_bad_counter.rsp  ctr_encrypt_bad_key.rsp  ecb_decrypt_bad_plaintext.rsp  ecb_encrypt_bad_ciphertext.rsp  ofb_encrypt_bad_ciphertext.rsp
tests/: test_aes_dut.py  test_cli.py  test_comparator.py  test_failure_injection_vectors.py  test_json_parser.py  test_rsp_parser.py
