[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-validation"
version = "0.1.0"
description = "Terminal-first cryptographic validation framework using NIST-style test vectors."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pycryptodome",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
crypto-validate = "crypto_validation.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
